--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-top: 60px;
+  margin: 0;
+  padding: 0;
 }
 
 .main {
